docs: accepter ADR-0023 après gate M2 58/58